WAYPOINT_ICONS = \
  wp_camp.png \
  wp_car.png \
  wp_deer.png \
  wp_flag.png \
  wp_geocache.png \
  wp_geocache_fnd.png \
  wp_house.png \
  wp_wpt_dot.png \
  wp_dollar.png \
  wp_golf.png \
  wp_summit.png \
  wp_anchor.png \
  wp_forest.png \
  wp_parking.png \
  wp_sml_cty.png \
  wp_med_cty.png \
  wp_lrg_cty.png \
  wp_cap_cty.png \
  wp_bell.png \
  wp_diamond_grn.png \
  wp_diamond_red.png \
  wp_dive1.png \
  wp_dive2.png \
  wp_fish.png \
  wp_fuel.png \
  wp_horn.png \
  wp_knife.png \
  wp_light.png \
  wp_mug.png \
  wp_skull.png \
  wp_square_grn.png \
  wp_square_red.png \
  wp_wbuoy.png \
  wp_wreck.png \
  wp_null.png \
  wp_mine.png \
  wp_school.png \
  wp_cemetery.png \
  wp_church.png \
  wp_military.png \
  wp_mob.png \
  wp_buoy_ambr.png \
  wp_buoy_blck.png \
  wp_buoy_blue.png \
  wp_buoy_grn.png \
  wp_buoy_grn_red.png \
  wp_buoy_grn_wht.png \
  wp_buoy_orng.png \
  wp_buoy_red.png \
  wp_buoy_red_grn.png \
  wp_buoy_red_wht.png \
  wp_buoy_violet.png \
  wp_buoy_wht.png \
  wp_buoy_wht_grn.png \
  wp_buoy_wht_red.png \
  wp_dot.png \
  wp_rbcn.png \
  wp_boat_ramp.png \
  wp_restroom.png \
  wp_shower.png \
  wp_drinking_wtr.png \
  wp_phone.png \
  wp_1st_aid.png \
  wp_info.png \
  wp_park.png \
  wp_picnic.png \
  wp_scenic.png \
  wp_skiing.png \
  wp_swimming.png \
  wp_dam.png \
  wp_controlled.png \
  wp_danger.png \
  wp_restricted.png \
  wp_ball.png \
  wp_rv_park.png \
  wp_bridge.png \
  wp_building.png \
  wp_tunnel.png \
  wp_beach.png \
  wp_airplane.png \
  wp_ice_skating.png

WAYPOINT_ICONS_LARGE =
WAYPOINT_ICONS_LARGE += wp_1st_aid_large.png
WAYPOINT_ICONS_LARGE += wp_airplane_large.png
WAYPOINT_ICONS_LARGE += wp_amuse_pk_large.png
WAYPOINT_ICONS_LARGE += wp_anchor_large.png
WAYPOINT_ICONS_LARGE += wp_ball_large.png
WAYPOINT_ICONS_LARGE += wp_beach_large.png
WAYPOINT_ICONS_LARGE += wp_bell_large.png
WAYPOINT_ICONS_LARGE += wp_bike_trail_large.png
WAYPOINT_ICONS_LARGE += wp_block_blue_large.png
WAYPOINT_ICONS_LARGE += wp_block_green_large.png
WAYPOINT_ICONS_LARGE += wp_block_red_large.png
WAYPOINT_ICONS_LARGE += wp_boat_ramp_large.png
WAYPOINT_ICONS_LARGE += wp_bowling_large.png
WAYPOINT_ICONS_LARGE += wp_bridge_large.png
WAYPOINT_ICONS_LARGE += wp_building_large.png
WAYPOINT_ICONS_LARGE += wp_buoy_ambr_large.png
WAYPOINT_ICONS_LARGE += wp_buoy_blck_large.png
WAYPOINT_ICONS_LARGE += wp_buoy_blue_large.png
WAYPOINT_ICONS_LARGE += wp_buoy_grn_large.png
WAYPOINT_ICONS_LARGE += wp_buoy_grn_red_large.png
WAYPOINT_ICONS_LARGE += wp_buoy_grn_wht_large.png
WAYPOINT_ICONS_LARGE += wp_buoy_orng_large.png
WAYPOINT_ICONS_LARGE += wp_buoy_red_grn_large.png
WAYPOINT_ICONS_LARGE += wp_buoy_red_large.png
WAYPOINT_ICONS_LARGE += wp_buoy_red_wht_large.png
WAYPOINT_ICONS_LARGE += wp_buoy_violet_large.png
WAYPOINT_ICONS_LARGE += wp_buoy_wht_grn_large.png
WAYPOINT_ICONS_LARGE += wp_buoy_wht_large.png
WAYPOINT_ICONS_LARGE += wp_buoy_wht_red_large.png
WAYPOINT_ICONS_LARGE += wp_camp_large.png
WAYPOINT_ICONS_LARGE += wp_car_large.png
WAYPOINT_ICONS_LARGE += wp_car_rental_large.png
WAYPOINT_ICONS_LARGE += wp_car_repair_large.png
WAYPOINT_ICONS_LARGE += wp_cemetery_large.png
WAYPOINT_ICONS_LARGE += wp_church_large.png
WAYPOINT_ICONS_LARGE += wp_civil_large.png
WAYPOINT_ICONS_LARGE += wp_controlled_large.png
WAYPOINT_ICONS_LARGE += wp_conv_store_large.png
WAYPOINT_ICONS_LARGE += wp_crossing_large.png
WAYPOINT_ICONS_LARGE += wp_dam_large.png
WAYPOINT_ICONS_LARGE += wp_danger_large.png
WAYPOINT_ICONS_LARGE += wp_deer_large.png
WAYPOINT_ICONS_LARGE += wp_dive1_large.png
WAYPOINT_ICONS_LARGE += wp_dive2_large.png
WAYPOINT_ICONS_LARGE += wp_dollar_large.png
WAYPOINT_ICONS_LARGE += wp_drinking_wtr_large.png
WAYPOINT_ICONS_LARGE += wp_fastfood_large.png
WAYPOINT_ICONS_LARGE += wp_fhs_facility_large.png
WAYPOINT_ICONS_LARGE += wp_fish_large.png
WAYPOINT_ICONS_LARGE += wp_fitness_large.png
WAYPOINT_ICONS_LARGE += wp_flag_blue_large.png
WAYPOINT_ICONS_LARGE += wp_flag_green_large.png
WAYPOINT_ICONS_LARGE += wp_flag_red_large.png
WAYPOINT_ICONS_LARGE += wp_forest_large.png
WAYPOINT_ICONS_LARGE += wp_fuel_large.png
WAYPOINT_ICONS_LARGE += wp_geocache_fnd_large.png
WAYPOINT_ICONS_LARGE += wp_geocache_large.png
WAYPOINT_ICONS_LARGE += wp_glider_large.png
WAYPOINT_ICONS_LARGE += wp_golf_large.png
WAYPOINT_ICONS_LARGE += wp_grnd_trans_large.png
WAYPOINT_ICONS_LARGE += wp_horn_large.png
WAYPOINT_ICONS_LARGE += wp_house_large.png
WAYPOINT_ICONS_LARGE += wp_ice_skating_large.png
WAYPOINT_ICONS_LARGE += wp_info_large.png
WAYPOINT_ICONS_LARGE += wp_knife_large.png
WAYPOINT_ICONS_LARGE += wp_light_large.png
WAYPOINT_ICONS_LARGE += wp_lodging_large.png
WAYPOINT_ICONS_LARGE += wp_lrg_cty_large.png
WAYPOINT_ICONS_LARGE += wp_med_cty_large.png
WAYPOINT_ICONS_LARGE += wp_mine_large.png
WAYPOINT_ICONS_LARGE += wp_mob_large.png
WAYPOINT_ICONS_LARGE += wp_movie_large.png
WAYPOINT_ICONS_LARGE += wp_mug_large.png
WAYPOINT_ICONS_LARGE += wp_museum_large.png
WAYPOINT_ICONS_LARGE += wp_oil_field_large.png
WAYPOINT_ICONS_LARGE += wp_parachute_large.png
WAYPOINT_ICONS_LARGE += wp_parking_large.png
WAYPOINT_ICONS_LARGE += wp_park_large.png
WAYPOINT_ICONS_LARGE += wp_pharmacy_large.png
WAYPOINT_ICONS_LARGE += wp_phone_large.png
WAYPOINT_ICONS_LARGE += wp_picnic_large.png
WAYPOINT_ICONS_LARGE += wp_pin_blue_large.png
WAYPOINT_ICONS_LARGE += wp_pin_green_large.png
WAYPOINT_ICONS_LARGE += wp_pin_red_large.png
WAYPOINT_ICONS_LARGE += wp_pizza_large.png
WAYPOINT_ICONS_LARGE += wp_police_large.png
WAYPOINT_ICONS_LARGE += wp_post_ofc_large.png
WAYPOINT_ICONS_LARGE += wp_rbcn_large.png
WAYPOINT_ICONS_LARGE += wp_restricted_large.png
WAYPOINT_ICONS_LARGE += wp_restroom_large.png
WAYPOINT_ICONS_LARGE += wp_rv_park_large.png
WAYPOINT_ICONS_LARGE += wp_scenic_large.png
WAYPOINT_ICONS_LARGE += wp_school_large.png
WAYPOINT_ICONS_LARGE += wp_shopping_large.png
WAYPOINT_ICONS_LARGE += wp_short_tower_large.png
WAYPOINT_ICONS_LARGE += wp_shower_large.png
WAYPOINT_ICONS_LARGE += wp_skiing_large.png
WAYPOINT_ICONS_LARGE += wp_ski_resort_large.png
WAYPOINT_ICONS_LARGE += wp_skull_large.png
WAYPOINT_ICONS_LARGE += wp_sml_cty_large.png
WAYPOINT_ICONS_LARGE += wp_stadium_large.png
WAYPOINT_ICONS_LARGE += wp_store_large.png
WAYPOINT_ICONS_LARGE += wp_summit_large.png
WAYPOINT_ICONS_LARGE += wp_swimming_large.png
WAYPOINT_ICONS_LARGE += wp_tall_tower_large.png
WAYPOINT_ICONS_LARGE += wp_theater_large.png
WAYPOINT_ICONS_LARGE += wp_toll_booth_large.png
WAYPOINT_ICONS_LARGE += wp_trail_head_large.png
WAYPOINT_ICONS_LARGE += wp_truck_stop_large.png
WAYPOINT_ICONS_LARGE += wp_tunnel_large.png
WAYPOINT_ICONS_LARGE += wp_ultralight_large.png
WAYPOINT_ICONS_LARGE += wp_wbuoy_large.png
WAYPOINT_ICONS_LARGE += wp_weigh_station_large.png
WAYPOINT_ICONS_LARGE += wp_wrecker_large.png
WAYPOINT_ICONS_LARGE += wp_wreck_large.png
WAYPOINT_ICONS_LARGE += wp_zoo_large.png

ICONS = \
  viking.png \
  bing_maps.png \
  addtr_18.png \
  begintr_18.png \
  addwp_18.png \
  edtr_18.png \
  edwp_18.png \
  geomove_18.png \
  geozoom_18.png \
  mapdl_18.png \
  demdl_18.png \
  mover_22.png \
  ruler_18.png \
  showpic_18.png \
  zoom_18.png \
  route_finder_18.png \
  select_18.png \
  thumbnails.png \
  vikaggregatelayer.png \
  vikcoordlayer.png \
  vikdemlayer.png \
  vikgeoreflayer.png \
  vikgpslayer.png \
  vikmapslayer.png \
  viktrwlayer.png

CURSORS = \
  cursor_addtr.png \
  cursor_begintr.png \
  cursor_edtr.png \
  cursor_geozoom.png \
  cursor_ruler.png \
  cursor_addwp.png \
  cursor_edwp.png \
  cursor_route_finder.png \
  cursor_showpic.png \
  cursor_demdl.png \
  cursor_geomove.png \
  cursor_mapdl.png \
  cursor_zoom.png

ALL_ICONS = $(ICONS) $(WAYPOINT_ICONS) $(WAYPOINT_ICONS_LARGE) $(CURSORS)
EXTRA_DIST = $(ALL_ICONS)
ALL_ICONS_HEADER = $(ALL_ICONS:.png=_pixmap.h)

BUILT_SOURCES = $(ALL_ICONS_HEADER) icons.c icons.h
CLEANFILES = $(BUILT_SOURCES)

noinst_LIBRARIES = libicons.a
libicons_a_SOURCES = icons.c icons.h

icons.h: $(ALL_ICONS_HEADER)
	echo "/* Generated file */" > $@
	sed -n "s/^\(const.*\) = {/extern \1;/p" $(ALL_ICONS_HEADER) >> $@

icons.c: $(ALL_ICONS_HEADER)
	echo "/* Generated file */" > $@
	echo "#include <gdk-pixbuf/gdk-pixdata.h>" >> $@
	for file in *_pixmap.h ; do echo "#include \"$$file\"" >> $@ ; done

%_pixmap.h: %.png
	gdk-pixbuf-csource --name="`basename $< .png`_pixbuf" --struct --extern $< > $@
	cat $@ | sed -e 's/\(pixel_data: ..\)/\1 (unsigned char \*)/' > temp$@.h
	mv temp$@.h $@

$(BUILT_SOURCES): $(srcdir)/Makefile.am

AM_CFLAGS       = -Wall -g -D_GNU_SOURCE \
	$(PACKAGE_CFLAGS)

iconsdir = $(datadir)/icons/hicolor/48x48/apps
icons_DATA = viking.png
gtk_update_icon_cache = gtk-update-icon-cache -f -t $(datadir)/icons/hicolor

install-data-hook:
	@-if test -z "$(DESTDIR)"; then \
	        echo "Updating Gtk icon cache."; \
	        $(gtk_update_icon_cache); \
	else \
	        echo "*** Icon cache not updated.  After install, run this:"; \
	        echo "***   $(gtk_update_icon_cache)"; \
	fi
